crates/jsonschema-codegen/tests/ui/invalid_type_non_string_array.stderr
error: 42 is not of types "string", "array"
 --> tests/ui/invalid_type_non_string_array.rs:1:1
  |
1 | #[jsonschema::validator(schema = r#"{"type":42}"#)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `jsonschema::validator` (in Nightly builds, run with -Z macro-backtrace for more info)
